--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+    <script src="https://486973354.supabase.co/storage/v1/object/public/public-assets/anti_flicker.js"></script>
     <script async src="https://makxejaihvjucpzaxfkf.supabase.co/storage/v1/object/public/public-assets/organizations/70a464ff-ce6d-4997-9b2f-c5040d41c281/scripts/script.js"></script>
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
